--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -67,6 +67,7 @@ producto.categoria=Categor\u00eda
 producto.descripcion=Descripci\u00f3n
 producto.detalle=Detalle
 producto.existencias=Existencias
+producto.rutaImagen=Imagen
 producto.imagen=Ruta de la imagen
 producto.listado=Listado de Productos
 producto.precio=Precio
